--- a/src/components/style.css
+++ b/src/components/style.css
@@ -47,3 +47,29 @@ li {
     padding-bottom: 20px;
     margin-right: 15px;
 }
+
+.estiloItem {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 1px solid rgb(173, 173, 173);
+    border-radius: 5px;
+    height: 200px;
+    width: 150px;
+}
+
+.conteoItem {
+    display: flex;
+    justify-content: center;
+    padding: 10px 0 10px 0;
+    align-items: center;
+}
+
+.btnAgregar {
+    display: flex;
+    justify-content: center;
+}
+
+.margenconteo {
+    margin: 0 10px 0 10px;
+}
